--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>Bagpiping in Linlithgow and Central Scotland</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,14 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>The Linlithgow Piper</h1>
+					<p>Creative Bagpiping for Your Special Day <a href="http://html5up.net">
+
+					</a>Bagpiping in central Scotland</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">About Me</a></li>
 					</ul>
 				</div>
 			</section>
@@ -32,9 +34,9 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I am Struan, a 16 year old Linlithgow lad passionate about bagpiping.  I really enjoyed piping at my uncles wedding, and thought it might be fun to make a difference to other peoples special days too.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -46,25 +48,27 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Stuff I do</h2>
+							<h2>The type of events I pipe at</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>Whether you are getting married, have a special event or just want to listen to bagpiping, i'd love to play for you. </p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<span class="icon solid major fa-ring"></span>
+								<h3>Weddings
+						
+								</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<span class="icon solid major fa-star"></span>
+								<h3>Special Events</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<span class="icon solid major fa-crown"></span>
+								<h3>VIP Visitors</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<span class="icon solid major fa-dove"></span>
+								<h3>Funerals</h3>
 							</li>
 						</ul>
 					</div>
@@ -78,9 +82,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>Get in touch and let's speak?</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I live in beautiful Linlithgow but I am happy to bagpipe for your event in Scotland.  Nearby towns include Edinburgh, Glasgow, Falkirk, Livingston and Stirling.  </p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
@@ -428,14 +432,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li><a href="https://www.linkedin.com/in/struan-melhuish-14410b356/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:srsmelhuish@outlook.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
